# sed-dl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo_legacy.toml  Cargo_mono.toml  LICENSE  README.md
.github/scripts/: prepare-release-asset.sh
.github/workflows/: release.yml
src/: cli.rs  client.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  main_legacy.rs  main_mono.rs  models.rs  symbols.rs  ui.rs  utils.rs  workflows.rs
src/config/: token.rs
src/downloader/: auth.rs  dispatcher.rs  job.rs  m3u8.rs  mod.rs  negotiator.rs  task_processor.rs  task_runner.rs
src/extractor/: chapter_resolver.rs  common.rs  course.rs  mod.rs  sync_classroom.rs  textbook.rs  utils.rs
src/models/: api.rs  mod.rs
tests/: cli_dispatch_test.rs  client_retry_test.rs  course_extractor_test.rs  sync_classroom_extractor_test.rs  textbook_extractor_test.rs
tests/fixtures/: course_response.json  sync_classroom_response.json  textbook_audio_response.json  textbook_details_response.json
