[package]
name = "sed_dl"
version = "1.0.0"
edition = "2024"
authors = ["ds"]
license = "MIT"
description = "Command-line tool for downloading resources from the National Primary and Secondary Smart Education Platform"
repository = "https://github.com/lss53/sed-dl"
readme = "README.md"
keywords = ["downloader", "education", "cli", "smartedu"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo"] }
url = "2"
indicatif = "0.17"
m3u8-rs = "6.0.0"
colored = "2"
rpassword = "7"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
ecb = { version = "0.1", features = ["std"] }
base64 = "0.22"
md-5 = "0.10"
futures = "0.3"
anyhow = "1"
thiserror = "1"
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dashmap = "5"
heck = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
percent-encoding = "2"
hex = "0.4"
once_cell = "1.19"
async-trait = "0.1"
dunce = "1.0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "sed-dl"
path = "src/main.rs"