[package]
name = "sed-dl"
version = "1.3.1"
edition = "2024"
authors = ["ds"]
license = "MIT"
description = "Command-line tool for downloading resources from the National Primary and Secondary Smart Education Platform"
repository = "https://github.com/lss53/sed-dl"
readme = "README.md"
keywords = ["downloader", "education", "cli", "smartedu"]
categories = ["command-line-utilities"]

[dependencies]
# 网络与异步核心
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行与UI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.18"
colored = "3.0"
rpassword = "7.4"

# 数据处理与加密
url = "2.5"
m3u8-rs = "6.0.0"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
ecb = { version = "0.1", features = ["std"] }
base64 = "0.22"
md-5 = "0.10"
regex = "1.10"
percent-encoding = "2.3"
hex = "0.4"
heck = "0.5"
dashmap = "6.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 系统与工具
tempfile = "3.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
dunce = "1.0.5"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
itertools = "0.14.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "sed-dl"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1.3.0"
sed-dl = { path = ".", features = ["testing"] }

[features]
# 用于在集成测试中暴露额外的辅助函数
testing = []
